@@ -19,6 +19,7 @@ Release 0.1.0a3
 * Added:
   - [Library] [UI] (#5) Allow any peer to connect to multiple endpoints
   - [Library] [UI] (#6) Add custom "AllowedIPs" to a peer
+  - [Library] [UI] (#7) Add option to set PersistentKeepAlive per peer
   - [Library] [UI] (#8) Add connection matrix
 * Fixed:
   - [UI] Setting "verbosity" is now used at all
